Revision history for Perl extension Perl-MinimumVersion

1.29 to be released
	- "Use of uninitialized value in null operation" fix.
	- Adding test for "utf8::is_utf" 5.8.1 special case

1.28 Wed  2 Mar 2011
	- The ->isa in the 5.10 operator and magic variable tests were
	  back the front, breaking both. Fixed (ADAMK)
	- Magic variable rules now check using ->symbol method instead of
	  ->content so that $+{foo} are correctly treated like %+ (ADAMK)
	- Removed -w from tests to allow testing with Tainting on (ADAMK)

1.27 Sat 26 Feb 2011
	- Updating to Module::Install::DSL 1.00
	- Updating copyright year
	- Fix detection of binary numbers (Alexandr Ciornii)
	- Add check for variables added in 5.5 (Alexandr Ciornii)
	- Correct detection of different cases of '...' (Alexandr Ciornii)
	- Detection of bareword that ends with double colon (Alexandr Ciornii)

1.26 Thu 22 Jul 2010
	- Detect "package NAME VERSION" in 5.12. (Steffen Mueller)
	- Detect "..." (yada yada yada) in 5.12. (Steffen Mueller)
	- Detect "use feature ':5.12';" in 5.12. (Steffen Mueller)

1.25 Sun 11 Apr 2010
	- Error in minimum_syntax_reason discovered by perl 5.12 (Alexandr Ciornii)

1.24 Fri 22 Jan 2010
	- The previous changes seem to work well in practice now,
	  switching to prod release. (ADAMK)

1.23_03 Fri 22 Jan 2010
	- The --blame output now prints actually shows which file (ADAMK)

1.23_02 Fri 22 Jan 2010
	- The --blame option now works in the perlver script (ADAMK)

1.23_01 Thu 14 Jan 2010
	- Reworked the internals to capture the version, rule and PPI
	  element responsible for each limitation as P:MV:Reason (ADAMK)
	- Added first experimental version of the new _reason API (ADAMK)
	- Adding 5.8 dependency for "use Carp version ()" (ADAMK)
	- module Errno requires perl 5.5 (Alexandr Ciornii)
	- PPI is no longer compatible with perl 5.5, so P::MV can also
	  depend on 5.6 (Alexandr Ciornii)
	- Bumping File::Find::Rule dependency to 0.32 because we break with
	  0.31 (ADAMK)
